--- a/src/Blog/CoreBundle/Resources/translations/messages.hu.yml
+++ b/src/Blog/CoreBundle/Resources/translations/messages.hu.yml
@@ -1,10 +1,25 @@
 home: Kezdőlap
 
+on: Publikálva
 by: Szerző
 read.more: Tovább
-author: Szerző
+name: Név
+send: Küldés
 
 post:
-  plural: Posts
+  plural: Postok
   latest: Legfrissebb postok
-  on: Posted on
+  on: Postolva
+  by: Postolta
+  by.author: Postolta %name%
+  comments: '{0} Nincs komment|{1} %count% komment|]1,Inf] %count% komment'
+
+comment:
+  singular: Komment
+  plural: Kommentek
+  write: Kommentelj
+
+
+author:
+  title: Szerző
+  empty.posts: Ez a szerző még nem postolt.
